--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
                 </div>
                 <div class="slide-show">
                     <div class="slide"><a href="#"><img src="img/bunners/s940x380.webp" alt="slide"></a>
-                        <a href="#"><img class="slide-button-foword slide-button" src="img/next-button.png" alt="foword"></a>
-                        <a href="#"><img class="slide-button-next slide-button" src="img/next-button.png" alt="next"></a>
+                        <a href="#"><img class="slide-button-foword slide-button" src="img/next-button.svg" alt="foword"></a>
+                        <a href="#"><img class="slide-button-next slide-button" src="img/next-button.svg" alt="next"></a>
                     </div>
                 </div>
                 <h1 class="page-title">События в ближайшие дни</h1>
@@ -138,8 +138,9 @@
                 </div>
                 </div>
             </div>
+    </div>
         <div class="footer">
-            <div class="container">
+            <div class="content">
                 <div class="footer-wraper page-content">
                     <div class="footer-subscribe">
                         <p class="footer-subscribe-label">Подпишитесь на акции <br> и анонсы событий</p>
@@ -195,7 +196,7 @@
                 </div>
             </div>
         </div>
-    </div> 
+    
 </body>
 
 </html>
