--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <title>maket site</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 
 <body>
     <div class="wrapper">  
         <div class="header">
-                <a href="#"><img class="logo-img" src="img/1280px-Yandex_afisha.png" alt="logo"></a>
+                <a href="#"><img class="logo-img" src="{% static 'img/1280px-Yandex_afisha.png' %}" alt="logo"></a>
                 <form>
                     <p><input type="search" name="q" placeholder="События, артисры и места"> 
-                    <img class="search" src="img/search.png" alt="search">
+                    <img class="search" src="{% static 'img/search.png' %}" alt="search">
                 </form> 
-                <a class="city" href="#"><img class="marker-img" src="img/mapmarker.png" alt="place">Москва</a> 
+                <a class="city" href="#"><img class="marker-img" src="{% static 'img/mapmarker.png' %}" alt="place">Москва</a> 
                 <a class="login" href="#">Войти</a>          
         </div>
         <div class="container">
@@ -43,15 +43,15 @@
                     </ul>
                 </div>
                 <div class="slide-show">
-                    <div class="slide"><a href="#"><img src="img/bunners/s940x380.webp" alt="slide"></a>
-                        <a href="#"><img class="slide-button-foword slide-button" src="img/next-button.svg" alt="foword"></a>
-                        <a href="#"><img class="slide-button-next slide-button" src="img/next-button.svg" alt="next"></a>
+                    <div class="slide"><a href="#"><img src="{% static 'img/bunners/s940x380.webp' %}" alt="slide"></a>
+                        <a href="#"><img class="slide-button-foword slide-button" src="{% static 'img/next-button.svg' %}" alt="foword"></a>
+                        <a href="#"><img class="slide-button-next slide-button" src="{% static 'img/next-button.svg' %}" alt="next"></a>
                     </div>
                 </div>
                 <h1 class="page-title">События в ближайшие дни</h1>
                 <div class="nearest">
                     <div>
-                        <a href="#"><img src="img/s372x223_lelingrad.webp" alt="bunner1"></a>
+                        <a href="#"><img src="{% static 'img/s372x223_lelingrad.webp' %}" alt="bunner1"></a>
                         <h2>Ленинград</h2>
                         <ul >
                             <li><a href="#">14 июня</a></li>
@@ -59,7 +59,7 @@
                         </ul>
                     </div>
                     <div>
-                        <a href="#"><img src="img/s372x223_lelingrad.webp" alt="bunner1"></a>
+                        <a href="#"><img src="{% static 'img/s372x223_lelingrad.webp' %}" alt="bunner1"></a>
                         <h2>Ленинград</h2>
                         <ul >
                             <li><a href="#">14 июня</a></li>
@@ -67,7 +67,7 @@
                         </ul>
                     </div>
                     <div>
-                        <a href="#"><img src="img/s372x223_lelingrad.webp" alt="bunner1"></a>
+                        <a href="#"><img src="{% static 'img/s372x223_lelingrad.webp' %}" alt="bunner1"></a>
                         <h2>Ленинград</h2>
                         <ul >
                             <li><a href="#">14 июня</a></li>
@@ -78,7 +78,7 @@
                 <h1 class="page-title">Самые ожидаемые концерты</h1>
                 <div class="nearest">
                     <div>
-                        <a href="#"><img src="img/s372x223_lelingrad.webp" alt="bunner1"></a>
+                        <a href="#"><img src="{% static 'img/s372x223_lelingrad.webp' %}" alt="bunner1"></a>
                         <h2>Ленинград</h2>
                         <ul >
                             <li><a href="#">14 июня</a></li>
@@ -86,7 +86,7 @@
                         </ul>
                     </div>
                     <div>
-                        <a href="#"><img src="img/s372x223_lelingrad.webp" alt="bunner1"></a>
+                        <a href="#"><img src="{% static 'img/s372x223_lelingrad.webp' %}" alt="bunner1"></a>
                         <h2>Ленинград</h2>
                         <ul >
                             <li><a href="#">14 июня</a></li>
@@ -94,7 +94,7 @@
                         </ul>
                     </div>
                     <div>
-                        <a href="#"><img src="img/s372x223_lelingrad.webp" alt="bunner1"></a>
+                        <a href="#"><img src="{% static 'img/s372x223_lelingrad.webp' %}" alt="bunner1"></a>
                         <h2>Ленинград</h2>
                         <ul >
                             <li><a href="#">14 июня</a></li>
@@ -105,32 +105,32 @@
                 <h1 class="page-title">Подборки</h1>
                 <div class="selections">
                     <div>
-                        <a href="#"><img src="img/bunners/big.webp" alt=""></a>
+                        <a href="#"><img src="{% static 'img/bunners/big.webp' %}" alt=""></a>
                         <h2>Lorem ipsum.</h2>
                         <p>12 событий</p>
                     </div>
                     <div>
-                        <a href="#"><img src="img/bunners/big.webp" alt=""></a>
+                        <a href="#"><img src="{% static 'img/bunners/big.webp' %}" alt=""></a>
                         <h2>Lorem ipsum.</h2>
                         <p>12 событий</p>
                     </div>
                     <div>
-                        <a href="#"><img src="img/bunners/big.webp" alt=""></a>
+                        <a href="#"><img src="{% static 'img/bunners/big.webp' %}" alt=""></a>
                         <h2>Lorem ipsum.</h2>
                         <p>12 событий</p>
                     </div>
                     <div>
-                        <a href="#"><img src="img/bunners/big.webp" alt=""></a>
+                        <a href="#"><img src="{% static 'img/bunners/big.webp' %}" alt=""></a>
                         <h2>Lorem ipsum.</h2>
                         <p>12 событий</p>
                     </div>
                     <div>
-                        <a href="#"><img src="img/bunners/big.webp" alt=""></a>
+                        <a href="#"><img src="{% static 'img/bunners/big.webp' %}" alt=""></a>
                         <h2>Lorem ipsum.</h2>
                         <p>12 событий</p>
                     </div>
                     <div>
-                        <a href="#"><img src="img/bunners/big.webp" alt=""></a>
+                        <a href="#"><img src="{% static 'img/bunners/big.webp' %}" alt=""></a>
                         <h2>Lorem ipsum.</h2>
                         <p>12 событий</p>
                     </div>
@@ -182,7 +182,7 @@
                         <div class="footer-main-block">
                             <div class="footer-apps">
                                 <a href="#" class="footer-app-link"></a>
-                                <a href="#" class="app-btn"><img src="img/app-store.svg" alt="app-store"></a>
+                                <a href="#" class="app-btn"><img src="{% static 'img/app-store.svg' %}" alt="app-store"></a>
                                 <p class="footer-block-label">Скачайте приложение <br> Я ИДУ</p>
                             </div>
                         </div>
